--- a/Crime-Game.css
+++ b/Crime-Game.css
@@ -31,4 +31,4 @@ body {
     color: black;
     text-align: right;
     margin-left: 15px;
-} /*I added the skeleton of the game in HTML and started writing the styles.*/
+}
