Finish start page

--- a/Crime-Game.css
+++ b/Crime-Game.css
@@ -1,9 +1,5 @@
 /* Plik style.css */
 
-* {
-    background-color: black;
-}
-
 body { 
     background-image: url("forest-6524635_1920.jpg");
     background-repeat: no-repeat;
@@ -11,24 +7,72 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .game {
-    width: 80%;
+    width: 80vw;
     background-color: rgba(220, 220, 220, 0.8);
     margin-left: auto;
     margin-right: auto;
-    padding: 20px;
+    padding: 40px;
     max-width: 500px;
-
+    
 } 
+
+#title {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .title {
     max-width: 100vw;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 50%);
+    padding: 5px;
     border-radius: 10px;
     color: black;
     text-align: right;
-    margin-left: 15px;
+    
+}
+
+button {
+    cursor: pointer;
+    color: lightgray;
+    text-decoration: solid;
+    font-size: 15px;
+    background-color: darkolivegreen;
+    background-image: linear-gradient(rgb(126, 153, 79), darkolivegreen);
+    border: 3px solid darkolivegreen;
+    padding: 10px;
+    margin: 20px;
+}
+
+#start-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+h1, h2 {
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    margin-bottom: 10px;
+}
+
+h2 {
+    margin-top: 0;
+    font-weight: lighter;
+}
+
+p {
+    padding: 20px;
+    line-height: 1.5;
 }
