--- a/styles/Crime-Game.css
+++ b/styles/Crime-Game.css
@@ -4,6 +4,7 @@ body {
     background-image: url("../resources/forest-6524635_1920.jpg");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
     font-family: Arial, sans-serif;
